[gd_scene load_steps=3 format=2]

[ext_resource path="res://Code/mainScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=2]

[node name="mainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 512.131, 299.579 )
scale = Vector2( 0.997647, 0.997645 )

[node name="zoneNameDebug" type="RichTextLabel" parent="."]
visible = false
margin_left = 889.759
margin_top = 553.746
margin_right = 1012.76
margin_bottom = 593.746
__meta__ = {
"_edit_use_anchors_": false
}

[node name="walkableArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="walkableArea"]

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( -110.6, 54.4994 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 516.337, 458.576 )

[connection signal="mouse_entered" from="walkableArea" to="." method="_on_walkableArea_mouse_entered"]
[connection signal="mouse_exited" from="walkableArea" to="." method="_on_walkableArea_mouse_exited"]
